@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-23T08:21:49Z",
+  "timestamp" : "2022-06-23T16:22:46Z",
   "count_outdated" : 316,
   "uniques_outdated" : 203,
-  "count" : 342,
+  "count" : 341,
   "uniques" : 218,
   "clones" : [
     {
       "timestamp": "2022-06-09T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
